--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,13 @@
 !/log/.keep
 !/tmp/.keep
 
-# Ignore Byebug command history file.
+.env
+.idea
 .byebug_history
+config/database.yml
+
+/app/assets/javascripts/bundles
+
+node_modules
+
+
