--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.9.1",
-    "react": "^0.14.8",
+    "image-preloader-promise": "^1.1.0",
     "jquery": "^3.0.0",
+    "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-timer-mixin": "^0.13.3",
     "reflux": "^0.4.1",
