--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 
 FB_APP_ID=  3455425252534
 FB_APP_SECRET = 345255455534
+AWS_KEY = SDFKADSFJASDLKFJSDLKFS
+AWS_SECRET = dfgldkglsjdflkgdjf
+AWS_DIR= dev
