--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
   },
   "homepage": "https://github.com/salza80/quiz_mistress#readme",
   "devDependencies": {
-    "coffee-script": "^1.10.0",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-polyfill": "^6.9.1",
+    "style-loader": "^0.13.1",
+    "image-preloader-promise": "^1.1.0",
+    "coffee-script": "^1.10.0",
+    "file-loader": "^0.10.1",
     "webpack": "^1.13.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.9.1",
-    "image-preloader-promise": "^1.1.0",
     "jquery": "^3.0.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-timer-mixin": "^0.13.3",
     "reflux": "^0.4.1",
-    "style-loader": "^0.13.1",
     "react-progressbar": "^1.4.6",
     "underscore": "^1.8.3"
   }
