--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,9 @@ config/database.yml
 
 /public/assets/*
 /public/uploads
-!/public/assets/images/defaults/*
-!/public/assets/webpack/webpack-assets/*
+!/public/assets/webpack
+/public/assets/webpack/*
+!/public/assets/webpack/webpack-assets
 
 node_modules
 
