--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "quiz_mistress",
-  "version": "1.0.0",
-  "description": "Quizzes",
-  "main": "index.js",
-  "scripts": {
-    "test": "test"
-  },
-  "keywords": [
-    "quiz"
-  ],
-  "author": "Sally Mclean",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/salza80/quiz_mistress/issues"
-  },
-  "homepage": "https://github.com/salza80/quiz_mistress#readme",
-  "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-polyfill": "^6.9.1",
-    "style-loader": "^0.13.1",
-    "image-preloader-promise": "^1.1.0",
-    "coffee-script": "^1.10.0",
-    "file-loader": "^0.10.1",
-    "webpack": "^1.13.1"
-  },
   "dependencies": {
-    "jquery": "^3.0.0",
+    "autoprefixer": "^7.0.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "7.x",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
+    "coffee-loader": "^0.7.3",
+    "coffee-script": "^1.12.5",
+    "compression-webpack-plugin": "^0.4.0",
+    "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "glob": "^7.1.1",
+    "js-yaml": "^3.8.4",
+    "node-sass": "^4.5.2",
+    "path-complete-extname": "^0.1.0",
+    "postcss-loader": "^2.0.5",
+    "postcss-smart-import": "^0.7.0",
+    "precss": "^1.4.0",
+    "prop-types": "^15.5.10",
+    "rails-erb-loader": "^5.0.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
-    "react-progressbar": "^1.4.6",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.17.0",
+    "webpack": "^2.5.1",
+    "webpack-manifest-plugin": "^1.1.0",
+    "webpack-merge": "^4.1.0",
+    "jquery": "^3.0.0",
+    "image-preloader-promise": "^1.1.0",
+    "rc-progress": "^2.1",
     "react-sound": "^0.5.2",
     "react-timer-mixin": "^0.13.3",
     "reflux": "^0.4.1",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.4.5"
   }
 }
