--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "rc-progress": "^2.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-redux": "^5.0.7",
     "react-sound": "^1.2.0",
     "react-timer-mixin": "^0.13.3",
+    "redux": "^4.0.0",
     "reflux": "^6.4.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.20.3",
