--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-sound": "^1.2.0",
     "react-timer-mixin": "^0.13.3",
     "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
     "reflux": "^6.4.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.20.3",
